--- a/sdk/python/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items.ipynb
+++ b/sdk/python/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items.ipynb
@@ -58,7 +58,7 @@
     "    Uniform,\n",
     "    BanditPolicy,\n",
     ")\n",
-    "\n",
+    "#hoooo\n",
     "from azure.ai.ml import automl"
    ]
   },
