--- a/sdk/python/jobs/automl-standalone-jobs/automl-forecasting-github-dau/auto-ml-forecasting-github-dau.ipynb
+++ b/sdk/python/jobs/automl-standalone-jobs/automl-forecasting-github-dau/auto-ml-forecasting-github-dau.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
@@ -80,6 +80,15 @@
     "from azure.ai.ml.constants import AssetTypes\n",
     "from azure.ai.ml import automl\n",
     "from azure.ai.ml import Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hi"
    ]
   },
   {
@@ -846,7 +855,7 @@
   ],
   "hide_code_all_hidden": false,
   "kernelspec": {
-   "display_name": "Python 3.10 - SDK V2",
+   "display_name": "Python 3.10 - SDK v2",
    "language": "python",
    "name": "python310-sdkv2"
   },
@@ -860,12 +869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "05949f3479f4013d8cdcf81c30b0e5ed801a9360182b77ac58fc7c6c004a75e2"
-   }
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
