--- a/sdk/python/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items.ipynb
+++ b/sdk/python/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items.ipynb
@@ -58,7 +58,6 @@
     "    Uniform,\n",
     "    BanditPolicy,\n",
     ")\n",
-    "#hoooo\n",
     "from azure.ai.ml import automl"
    ]
   },
@@ -509,7 +508,7 @@
     ")\n",
     "\n",
     "image_classification_job.set_limits(\n",
-    "    max_trials=10,\n",
+    "    max_trials=1,\n",
     "    max_concurrent_trials=2,\n",
     ")"
    ]
@@ -584,7 +583,7 @@
     "    target_column_name=\"label\",\n",
     ")\n",
     "\n",
-    "image_classification_job.set_limits(timeout_minutes=60)\n",
+    "image_classification_job.set_limits(timeout_minutes=60,max_trials=1)\n",
     "\n",
     "image_classification_job.set_training_parameters(model_name=\"vitb16r224\")"
    ]
@@ -1087,14 +1086,14 @@
     "        success_threshold=1,\n",
     "        timeout=2,\n",
     "        period=10,\n",
-    "        initial_delay=2000,\n",
+    "        initial_delay=20,\n",
     "    ),\n",
     "    readiness_probe=ProbeSettings(\n",
     "        failure_threshold=10,\n",
     "        success_threshold=1,\n",
     "        timeout=10,\n",
     "        period=10,\n",
-    "        initial_delay=2000,\n",
+    "        initial_delay=20,\n",
     "    ),\n",
     ")"
    ]
