--- a/sdk/python/jobs/automl-standalone-jobs/automl-nlp-text-named-entity-recognition-task-distributed-sweeping/automl-nlp-text-ner-task-distributed-with-sweeping.ipynb
+++ b/sdk/python/jobs/automl-standalone-jobs/automl-nlp-text-named-entity-recognition-task-distributed-sweeping/automl-nlp-text-ner-task-distributed-with-sweeping.ipynb
@@ -298,7 +298,7 @@
     "\n",
     "\n",
     "# Set limits\n",
-    "text_ner_job.set_limits(timeout_minutes=120, max_nodes=2)\n",
+    "text_ner_job.set_limits(timeout_minutes=120, max_trials=1, max_nodes=2)\n",
     "\n",
     "# Pass the fixed parameters\n",
     "text_ner_job.set_training_parameters(\n",
@@ -396,7 +396,7 @@
     ")\n",
     "\n",
     "text_ner_job.set_limits(\n",
-    "    timeout_minutes=120, max_trials=4, max_concurrent_trials=2, max_nodes=4\n",
+    "    timeout_minutes=120, max_trials=1, max_concurrent_trials=2, max_nodes=4\n",
     ")\n",
     "\n",
     "text_ner_job.extend_search_space(\n",
@@ -771,14 +771,14 @@
     "        success_threshold=1,\n",
     "        timeout=2,\n",
     "        period=10,\n",
-    "        initial_delay=2000,\n",
+    "        initial_delay=500,\n",
     "    ),\n",
     "    readiness_probe=ProbeSettings(\n",
     "        failure_threshold=10,\n",
     "        success_threshold=1,\n",
     "        timeout=10,\n",
     "        period=10,\n",
-    "        initial_delay=2000,\n",
+    "        initial_delay=500,\n",
     "    ),\n",
     ")"
    ]
