--- a/sdk/python/jobs/automl-standalone-jobs/automl-forecasting-task-bike-share/auto-ml-forecasting-bike-share.ipynb
+++ b/sdk/python/jobs/automl-standalone-jobs/automl-forecasting-task-bike-share/auto-ml-forecasting-bike-share.ipynb
@@ -394,6 +394,7 @@
     "# Limits are all optional\n",
     "forecasting_job.set_limits(\n",
     "    timeout_minutes=18,\n",
+    "    max_trials=4,\n",
     "    trial_timeout_minutes=5,\n",
     "    enable_early_termination=True,\n",
     "    max_concurrent_trials=4,\n",
