--- a/sdk/python/jobs/automl-standalone-jobs/automl-classification-task-bankmarketing/automl-classification-task-bankmarketing.ipynb
+++ b/sdk/python/jobs/automl-standalone-jobs/automl-classification-task-bankmarketing/automl-classification-task-bankmarketing.ipynb
@@ -40,6 +40,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "gather": {
+     "logged": 1634852261599
+    },
+    "name": "automl-import"
+   },
+   "outputs": [],
+   "source": [
+    "# Import required libraries\n",
+    "import os\n",
+    "from azure.identity import DefaultAzureCredential\n",
+    "from azure.identity import AzureCliCredential\n",
+    "from azure.ai.ml import automl, Input, MLClient, command\n",
+    "\n",
+    "from azure.ai.ml.constants import AssetTypes\n",
+    "from azure.ai.ml.entities import Data\n",
+    "from azure.ai.ml.automl import (\n",
+    "    classification,\n",
+    "    ClassificationPrimaryMetrics,\n",
+    "    ClassificationModels,\n",
+    ")"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
