--- a/sdk/python/jobs/automl-standalone-jobs/automl-forecasting-task-bike-share/auto-ml-forecasting-bike-share.ipynb
+++ b/sdk/python/jobs/automl-standalone-jobs/automl-forecasting-task-bike-share/auto-ml-forecasting-bike-share.ipynb
@@ -247,7 +247,7 @@
     "from azure.core.exceptions import ResourceNotFoundError\n",
     "from azure.ai.ml.entities import AmlCompute\n",
     "\n",
-    "cluster_name = \"bike-share-v2\"\n",
+    "cluster_name = \"cpu-cluster\"\n",
     "\n",
     "try:\n",
     "    # Retrieve an already attached Azure Machine Learning Compute.\n",
@@ -258,7 +258,7 @@
     "        size=\"STANDARD_DS12_V2\",\n",
     "        type=\"amlcompute\",\n",
     "        min_instances=0,\n",
-    "        max_instances=4,\n",
+    "        max_instances=3,\n",
     "        idle_time_before_scale_down=120,\n",
     "    )\n",
     "    poller = ml_client.begin_create_or_update(compute)\n",
@@ -388,7 +388,7 @@
     "    max_trials=4,\n",
     "    trial_timeout_minutes=5,\n",
     "    enable_early_termination=True,\n",
-    "    max_concurrent_trials=4,\n",
+    "    max_concurrent_trials=3,\n",
     ")\n",
     "\n",
     "# Specialized properties for Time Series Forecasting training\n",
