--- a/sdk/python/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items.ipynb
+++ b/sdk/python/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items.ipynb
@@ -419,7 +419,7 @@
     "from azure.ai.ml.entities import AmlCompute\n",
     "from azure.core.exceptions import ResourceNotFoundError\n",
     "\n",
-    "compute_name = \"gpu-cluster-nc6\"\n",
+    "compute_name = \"gpu-cluster\"\n",
     "\n",
     "try:\n",
     "    _ = ml_client.compute.get(compute_name)\n",
@@ -432,7 +432,7 @@
     "        size=\"Standard_NC6\",\n",
     "        idle_time_before_scale_down=120,\n",
     "        min_instances=0,\n",
-    "        max_instances=4,\n",
+    "        max_instances=1,\n",
     "    )\n",
     "    ml_client.begin_create_or_update(compute_config).result()"
    ]
@@ -509,7 +509,7 @@
     "\n",
     "image_classification_job.set_limits(\n",
     "    max_trials=1,\n",
-    "    max_concurrent_trials=2,\n",
+    "    max_concurrent_trials=1,\n",
     ")"
    ]
   },
@@ -665,7 +665,7 @@
     "image_classification_job.set_limits(\n",
     "    timeout_minutes=60,\n",
     "    max_trials=1,\n",
-    "    max_concurrent_trials=2,\n",
+    "    max_concurrent_trials=1,\n",
     ")\n",
     "\n",
     "image_classification_job.extend_search_space(\n",
