--- a/sdk/python/jobs/automl-standalone-jobs/automl-forecasting-task-bike-share/auto-ml-forecasting-bike-share.ipynb
+++ b/sdk/python/jobs/automl-standalone-jobs/automl-forecasting-task-bike-share/auto-ml-forecasting-bike-share.ipynb
@@ -860,7 +860,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ml_client.jobs.download(job_name, download_path=\".\")"
+    "scoring_job = list(ml_client.jobs.list(parent_job_name=job.name))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml_client.jobs.download(name=scoring_job.name, output_name="score", download_path=\".\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_path = "./named-outputs/score/" + output_file"
    ]
   },
   {
