--- a/sdk/python/jobs/automl-standalone-jobs/automl-forecasting-task-bike-share/auto-ml-forecasting-bike-share.ipynb
+++ b/sdk/python/jobs/automl-standalone-jobs/automl-forecasting-task-bike-share/auto-ml-forecasting-bike-share.ipynb
@@ -869,7 +869,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ml_client.jobs.download(name=scoring_job.name, output_name="score", download_path=\".\")"
+    "ml_client.jobs.download(name=scoring_job.name, download_path=\".\")"
    ]
   },
   {
