--- a/sdk/python/jobs/automl-standalone-jobs/automl-forecasting-task-bike-share/auto-ml-forecasting-bike-share.ipynb
+++ b/sdk/python/jobs/automl-standalone-jobs/automl-forecasting-task-bike-share/auto-ml-forecasting-bike-share.ipynb
@@ -878,7 +878,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fcst_df = pd.read_csv(output_file, parse_dates=[time_column_name, \"forecast_origin\"])\n",
+    "output_path = \"./named-outputs/score/\" + output_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fcst_df = pd.read_csv(output_path, parse_dates=[time_column_name, \"forecast_origin\"])\n",
     "fcst_df.head()"
    ]
   },
